# wee

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  compile.sh  dune-project  interpreter.py
.github/workflows/: publish.yml
example/: README.md  example.c  example.h
lib/: dispatcher.ml  dispatcher.mli  dune  elvm.ml  elvm_program.ml  elvm_program.mli  instruction.ml  program.ml  program.mli  symbolic_instruction.ml  tlvm_program.ml  tlvm_program.mli
lib/jump-table/: jump_table_intf.ml  naive_jump_table.ml  naive_jump_table.mli
lib/jump_table/: jump_table_intf.ml  naive_jump_table.ml  naive_jump_table.mli
lib/parser/: elvm.ml  elvm.mli
lib/resolver/: naive_resolver.ml  naive_resolver.mli  resolver_intf.ml
src/: dune-project  wee.opam
src/lib/: compiler.ml  compiler.mli  dispatcher.ml  dispatcher.mli  elvm_instruction.ml  elvm_program.ml  program.ml  program.mli  symbolic_instruction.ml
src/test/: dune
test/: dune
