(lang dune 3.7)

(name wee)

(generate_opam_files true)

(source
 (github nathanfarlow/wee))

(authors "Nathan Farlow")

(maintainers "Nathan Farlow")

(license MIT)

(documentation https://github.com/nathanfarlow/wee)

(package
 (name wee)
 (synopsis "Compile elvm IR to wee")
 (depends ocaml dune core js_of_ocaml-ppx))
